User details added to registration
